# usermanagementfastapi

./: .gitignore  Makefile  README.md  compose.yml  deploy.yml  docker-compose.yml  dockerfile  entrypoint.sh  env  package-lock.json  prestart.sh  pyproject.toml
alembic/versions/: 325b61fec4fb_.py
app/: backend_pre_start.py  initial_data.py  main.py  prestart.sh
app/config/: base.py  db_config.py  init_db.py  settings.py
app/core/: dependencies.py  save_picture.py  security.py  utils.py
app/crud/: base.py  permissions.py  user.py
app/models/: base.py  users.py
app/routes/: base.py  groups.py  login.py  roles.py  user.py
app/schemas/: permissions.py  token.py  user.py
app/utils/: appmails.py
backend/: dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f5889908d7e_.py  10b0304c4fbc_.py  3891b96b40cb_.py  5925969227ee_.py  94589a3f09fa_.py  96cb535e5a3a_.py  9c26b3d0b442_.py  b538f33c0c19_.py  d0c3bf80a159_.py
backend/app/config/: base.py  session.py
backend/app/core/: dependencies.py
backend/app/crud/: base.py  permissions.py
backend/app/models/: base.py  groups.py  roles.py
backend/app/routes/: auth.py  base.py  groups.py  login.py  roles.py
backend/app/schemas/: permissions.py
backend/app/utils/: appmails.py  images.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChangePassword.vue  GroupsTable.vue  RolesTable.vue
frontend/src/composables/: useAPI.js  useAxios.js  useEmailTaken.js  (+1 more)
(+39 files in other folders)
